    ADDED: Locate (integrating the findutils-locate package of GNU into Krusader). TEST IT
    ADDED: Heiner's patch for 'logical selection mode' is applied and used as default. TEST IT
    ADDED: application dependency setting in konfigurator
    ADDED: Csaba's new konfigurator is here, boys and girls!
    ADDED: heiner's quicksearch patch
    ADDED: calculate occupied space prints the directory's size (wincmd-style) - thanks heiner!
    ADDED: current directory in history menu is checked
    ADDED: a working user menu (try alt+~), but a bit rough on the edges
    ADDED: KrSearch edit/view file in the result list window (F3, F4, right click)
    ADDED: a folder-history button, a-la-total commander. thanks to Hans Loffler!
    ADDED: selectall at rename
    ADDED: new shortcuts to search dialog (heiner)
    ADDED: directory synchronizer
    ADDED: file splitter
    ADDED: a missing credit for Frank in the about box
    FIXED: krusader freezes if the `df` process does not terminate (at network errors, IO wait)
    FIXED: krusaderui.rc bug, new menuitems does not appear after a krusader update
    FIXED: sort by EXT did not obey the 'case sensative sort' flag
    FIXED: 2 items on the view menu had the same shortcuts
    FIXED: increased speed of search, by emitting lesssignals (thanks to Lars)
    FIXED: statusbar updated only on mouse clicks, not on keyboard
    FIXED: translation: forcing non-english languages with a strange structure
    FIXED: freeze at modal dialogs and icon tray
    FIXED: crash at rename if the directory is refreshed by the watcher
    FIXED: stepping to the file below after delete (heiner)
    FIXED: window size and position saving at maximized mode
    FIXED: more freedom to give FTP proxy URL-s in "New FTP Connection" menu
    FIXED: crash at ftp://user@server@proxy:port FTP URL-s
    FIXED: no parent directory at tar://... and zip://... URL-s
    FIXED: font size problems in KCmdLine and KrMaskChoice